--- a/metadata/md5-cache/sys-fs/mdadm-3.4
+++ b/metadata/md5-cache/sys-fs/mdadm-3.4
@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile install postinst test
 DEPEND=virtual/pkgconfig app-arch/xz-utils virtual/pkgconfig virtual/pkgconfig
 DESCRIPTION=A useful tool for running RAID systems - it can be used as a replacement for the raidtools
-EAPI=4
+EAPI=5
 HOMEPAGE=http://neil.brown.name/blog/mdadm
 IUSE=static
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
@@ -9,6 +9,6 @@ LICENSE=GPL-2
 RDEPEND=>=sys-apps/util-linux-2.16
 RESTRICT=test
 SLOT=0
-SRC_URI=mirror://kernel/linux/utils/raid/mdadm/mdadm-3.3.4.tar.xz mirror://debian/pool/main/m/mdadm/mdadm_3.3-2.debian.tar.gz
+SRC_URI=mirror://kernel/linux/utils/raid/mdadm/mdadm-3.4.tar.xz mirror://debian/pool/main/m/mdadm/mdadm_3.3.4-1.1.debian.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85	udev	73058269b3e70e34e084fa3981282338
-_md5_=fe40477c4594948374a1970577cf2b62
+_md5_=379b9c65b828631a7943c24e6fd8cb19
