--- a/virtual/awk/ChangeLog
+++ b/virtual/awk/ChangeLog
@@ -1,28 +1,66 @@
 # ChangeLog for virtual/awk
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/awk/ChangeLog,v 1.7 2013/03/21 12:39:49 jlec Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  21 Mar 2013; Justin Lecher <jlec@gentoo.org> awk-0.ebuild, metadata.xml:
-  Keyword for ~-linux
+*awk-1 (09 Aug 2015)
+*awk-0 (09 Aug 2015)
 
-  25 Feb 2013; Zac Medico <zmedico@gentoo.org> awk-0.ebuild:
-  Add ~arm-linux and ~x86-linux keywords.
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +awk-0.ebuild,
+  +awk-1.ebuild, +metadata.xml:
+  proj/gentoo: Initial commit
 
-  11 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> awk-0.ebuild:
-  sh/s390 stable to match sys-apps/gawk keywording wrt #456762
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  06 Feb 2013; Christoph Junghans <ottxor@gentoo.org> awk-0.ebuild:
-  added ~amd64-fbsd as sys-apps/gawk has it
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  22 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> awk-0.ebuild:
-  QA: mark stable on all arches, since there is bound to be a stable version of
-  gawk or busybox in each one of them.
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  06 Jul 2012; Christoph Junghans <ottxor@gentoo.org> awk-0.ebuild:
-  add ~x86-macos
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-*awk-0 (04 Jun 2012)
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  04 Jun 2012; Christoph Junghans <ottxor@gentoo.org> +awk-0.ebuild,
-  +metadata.xml:
-  initial commit
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
+
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
+
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
+
+  Bug: https://bugs.gentoo.org/552720
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
+
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
+
